maint: after modifying padding, fixed up js code that switches between feeds to account for the extra padding on feeds

--- a/assets/css/user-page.css
+++ b/assets/css/user-page.css
@@ -36,6 +36,7 @@
 
 .collapsible-collapsed {
     height: 0;
+    padding: 0 !important;
     /*display: none;*/
     overflow: hidden;
     transition: height 400ms ease-in-out;
